# mtuci-rs

./: Cargo.toml
ch1/: Cargo.toml
ch2/: Cargo.toml
ch2/src/: guess.rs
ch3/: Cargo.toml
ch4/: Cargo.toml
ch4/src/: references.rs  slices.rs
ch5/: Cargo.toml
ch6/: Cargo.toml
homework2/: Cargo.toml
homework2/src/: task1.rs  task2.rs
homework4/: Cargo.toml
homework4/src/: vector.rs
rustlings/exercises/clippy/: clippy1.rs
rustlings/exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustlings/exercises/enums/: enums3.rs
rustlings/exercises/error_handling/: errors6.rs
rustlings/exercises/functions/: functions1.rs  functions2.rs  functions3.rs  functions4.rs  functions5.rs
rustlings/exercises/generics/: generics2.rs
rustlings/exercises/hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustlings/exercises/iterators/: iterators2.rs  iterators5.rs
rustlings/exercises/modules/: modules1.rs
rustlings/exercises/move_semantics/: move_semantics4.rs  move_semantics6.rs
rustlings/exercises/primitive_types/: primitive_types1.rs  primitive_types2.rs  primitive_types3.rs
rustlings/exercises/smart_pointers/: arc1.rs  cow1.rs
rustlings/exercises/structs/: structs1.rs
rustlings/exercises/traits/: traits2.rs
rustlings/exercises/variables/: variables6.rs
rustlings/exercises/vecs/: vecs2.rs
rustlings/quiz/: quiz1.rs  quiz2.rs
