[package]
name = "ch3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "variables"
path = "src/variables.rs"

[[bin]]
name = "types"
path = "src/datatypes.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "flow"
path = "src/controlflow.rs"

[dependencies]
