[package]
name = "ch4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "owner"
path = "src/ownership.rs"

[[bin]]
name = "references"
path = "src/references.rs"

[[bin]]
name = "slices"
path = "src/slices.rs"

[dependencies]
